--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-  <div>hello world11</div>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>CNode</title><link href=/static/css/app.c3dad11d4023193dded04760b4100f0b.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.97d9bc6b25359b04d182.js></script><script type=text/javascript src=/static/js/vendor.4321317d7f1203f29356.js></script><script type=text/javascript src=/static/js/app.90fb715fa4bd434cc91e.js></script></body></html>
