--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>CNode</title><link href=/static/css/app.c3dad11d4023193dded04760b4100f0b.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.97d9bc6b25359b04d182.js></script><script type=text/javascript src=/static/js/vendor.4321317d7f1203f29356.js></script><script type=text/javascript src=/static/js/app.90fb715fa4bd434cc91e.js></script></body></html>
+﻿
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>HTML5像素图片动画特效在线演示</title>
+<script type="text/javascript" src="./image_effect.js"></script>
+<style>
+body {
+	background:#000;
+}
+.des {
+	text-align:center;
+	font-size: xx-small;
+	color: #444;
+	font-family: Verdana, Geneva, sans-serif;
+}
+.highlight{
+	color: #888;
+}
+</style>
+</head>
+
+<body>
+<div align="center" id="container">
+	<canvas width="800" height="500" id="canvas">
+    	Oops, your browser doesn't support this application.
+    </canvas>
+</div>
+</body>
+</html>
