--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
 
 <body>
 <div align="center" id="container">
-	<canvas width="800" height="500" id="canvas">
+	<canvas width="1800" height="100%" id="canvas">
     	Oops, your browser doesn't support this application.
     </canvas>
 </div>
