--- a/index.html
+++ b/index.html
@@ -3,29 +3,97 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>HTML5像素图片动画特效在线演示</title>
-<script type="text/javascript" src="./image_effect.js"></script>
+<title></title>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
 <style>
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:700);
+
 body {
-	background:#000;
+	background: #fff;
+	color: #000;
+	margin: 0;
 }
-.des {
-	text-align:center;
-	font-size: xx-small;
-	color: #444;
-	font-family: Verdana, Geneva, sans-serif;
+
+.tiles {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
-.highlight{
-	color: #888;
+
+.tile {
+	position: relative;
+	float: left;
+	width: 33.333%;
+	height: 100%;
+	overflow: hidden;
 }
+
+.photo {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	transition: transform .5s ease-out;
+}
+
+.txt {
+	position: absolute;
+	z-index: 2;
+	right: 0;
+	bottom: 10%;
+	left: 0;
+	font-family: 'Roboto Slab', serif;
+	font-size: 9px;
+	line-height: 12px;
+	text-align: center;
+	cursor: default;
+}
+
+.x {
+	font-size: 32px;
+	line-height: 32px;
+}
+
 </style>
 </head>
 
 <body>
-<div align="center" id="container">
-	<canvas width="1800" height="100%" id="canvas">
-    	Oops, your browser doesn't support this application.
-    </canvas>
-</div>
+	<div class="tiles">
+    <div class="tile" data-scale="1.1" data-image="http://ultraimg.com/images/bNeWGWB.jpg"></div>
+    <div class="tile" data-scale="1.6" data-image="http://ultraimg.com/images/hzQ2IGW.jpg"></div>
+    <div class="tile" data-scale="2.4" data-image="./8.jpg"></div>
+  </div>
 </body>
+<script type="text/javascript">
+
+	$('.tile')
+			// tile mouse actions
+			.on('mouseover', function(){
+				$(this).children('.photo').css({'transform': 'scale('+ $(this).attr('data-scale') +')'});
+			})
+			.on('mouseout', function(){
+				$(this).children('.photo').css({'transform': 'scale(1)'});
+			})
+			.on('mousemove', function(e){
+				$(this).children('.photo').css({'transform-origin': ((e.pageX - $(this).offset().left) / $(this).width()) * 100 + '% ' + ((e.pageY - $(this).offset().top) / $(this).height()) * 100 +'%'});
+			})
+			// tiles set up
+			.each(function(){
+				$(this)
+					// add a photo container
+					.append('<div class="photo"></div>')
+					// some text just to show zoom level on current item in this example
+					.append('<div class="txt"><div class="x">'+ $(this).attr('data-scale') +'x</div>ZOOM ON<br>HOVER</div>')
+					// set up a background image for each tile based on data-image attribute
+					.children('.photo').css({'background-image': 'url('+ $(this).attr('data-image') +')'});
+			})
+	
+	</script>
 </html>
