--- a/index.html
+++ b/index.html
@@ -1,99 +1,1 @@
-﻿﻿
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
-<style>
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:700);
-
-body {
-	background: #fff;
-	color: #000;
-	margin: 0;
-}
-
-.tiles {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-
-.tile {
-	position: relative;
-	float: left;
-	width: 33.333%;
-	height: 100%;
-	overflow: hidden;
-}
-
-.photo {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-	transition: transform .5s ease-out;
-}
-
-.txt {
-	position: absolute;
-	z-index: 2;
-	right: 0;
-	bottom: 10%;
-	left: 0;
-	font-family: 'Roboto Slab', serif;
-	font-size: 9px;
-	line-height: 12px;
-	text-align: center;
-	cursor: default;
-}
-
-.x {
-	font-size: 32px;
-	line-height: 32px;
-}
-
-</style>
-</head>
-
-<body>
-	<div class="tiles">
-    <div class="tile" data-scale="1.1" data-image="http://ultraimg.com/images/bNeWGWB.jpg"></div>
-    <div class="tile" data-scale="1.6" data-image="http://ultraimg.com/images/hzQ2IGW.jpg"></div>
-    <div class="tile" data-scale="2.4" data-image="./8.jpg"></div>
-  </div>
-</body>
-<script type="text/javascript">
-
-	$('.tile')
-			// tile mouse actions
-			.on('mouseover', function(){
-				$(this).children('.photo').css({'transform': 'scale('+ $(this).attr('data-scale') +')'});
-			})
-			.on('mouseout', function(){
-				$(this).children('.photo').css({'transform': 'scale(1)'});
-			})
-			.on('mousemove', function(e){
-				$(this).children('.photo').css({'transform-origin': ((e.pageX - $(this).offset().left) / $(this).width()) * 100 + '% ' + ((e.pageY - $(this).offset().top) / $(this).height()) * 100 +'%'});
-			})
-			// tiles set up
-			.each(function(){
-				$(this)
-					// add a photo container
-					.append('<div class="photo"></div>')
-					// some text just to show zoom level on current item in this example
-					.append('<div class="txt"><div class="x">'+ $(this).attr('data-scale') +'x</div>ZOOM ON<br>HOVER</div>')
-					// set up a background image for each tile based on data-image attribute
-					.children('.photo').css({'background-image': 'url('+ $(this).attr('data-image') +')'});
-			})
-	
-	</script>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>CNode</title><link href=/static/css/app.f771b22d8f3fa41a22f9970de2042016.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.be7af5b2c2775c235ba5.js></script><script type=text/javascript src=/static/js/vendor.0d25fd622ecf8e427a44.js></script><script type=text/javascript src=/static/js/app.54bc173e622f9172e713.js></script></body></html>
